--- a/_config.yml
+++ b/_config.yml
@@ -84,8 +84,7 @@ author:
   avatar           : "Melinda.jpg"
   bio              : "Microbial Genomics and Bioinformatics Scientist | Computational Microbiologist | Consultant  (Biotech) | Scientific Writer and Editor"
   location         : "Melbourne, Australia"
-  employer         : "Freelance researcher
-                      and consultant"
+  employer         : "Freelance Researcher"
   googlescholar    : "https://scholar.google.com.au/citations?user=HgFxnPkAAAAJ&hl=en"
   email            : "melinda.ashcroft@outlook.com"
   researchgate     : "https://www.researchgate.net/profile/Melinda_Ashcroft"
