--- a/_config.yml
+++ b/_config.yml
@@ -87,10 +87,10 @@ author:
   employer         : "Freelance Researcher"
   links:
     - label: "Kolabtree"
-      icon: "https://image.kolabtree.com/kolab-logo-black-new-1200.jpg"
+      icon: "fa-solid fa-k"
       url: "https://www.kolabtree.com/find-an-expert/melinda-ashcroft"
     - label: "Publons"
-      icon: "https://publons.com/static/images/logos/full/blue_white.png"
+      icon: "fa-solid fa-p"
       url: "https://publons.com/researcher/3247407/melinda-m-ashcroft/"
   googlescholar    : "https://scholar.google.com.au/citations?user=HgFxnPkAAAAJ&hl=en"
   email            : "melinda.ashcroft@outlook.com"
