--- a/_config.yml
+++ b/_config.yml
@@ -112,8 +112,8 @@ author:
   xing             :
   youtube          :
   wikipedia        :
-  links            :
-    - label        : "Kolabtree"
+  kolabtree        : "find-an-expert/melinda-ashcroft"
+  publons          : "researcher/3247407/melinda-m-ashcroft/"
 
 
 # Reading Files
